# submit_nan

./: .gitignore  README.md
degree_centrality/: test_dc.sh  walk_and_dc.py
fmriprep/: draft_GRID_TEMPLATE.sh  draft_run_mriqc_group.sh  main.py  run_all_jobs.py
mriqc/: Makefile  pyproject.toml
mriqc/submit_mriqc/: main.py  singul.sh
mriqc/tests/: test_submit_nan_test.py
